# ankivibes

./: .gitignore  LICENSE  README.md  ankivibes-roadmap.md  pyproject.toml
src/ankivibes/: __init__.py  anki_bridge.py  anki_import.py  anki_profile.py  cli.py  config.py  corpus.py  editor.py  enrich.py  lemmatizer.py  pipeline.py
src/ankivibes/pytionary/: __init__.py
src/ankivibes/store/: __init__.py  jsonl.py  models.py  protocol.py
tests/: conftest.py  test_anki_bridge.py  test_anki_import.py  test_anki_profile.py  test_cli.py  test_corpus.py  test_editor.py  test_enrich.py  test_integration.py  test_lemmatizer.py  test_pipeline.py  test_store.py
tests/fixtures/: corpus_sample.tsv  sample_words.txt
