[project]
name = "ankivibes"
version = "0.1.0"
description = "CLI tool for Spanish vocabulary study with Anki integration"
readme = "README.md"
authors = [
    { name = "Mario Villaplana" }
]
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "spacy>=3.8.11",
    "es-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl",
    "pytionary @ git+ssh://git@github.com/supermari0/pytionary.git",
    "anki>=25.9.2",
]

[project.scripts]
ankivibes = "ankivibes.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.10.0",
]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "7 days"
